fixing table header and body alignment

--- a/client/css/dialog.css
+++ b/client/css/dialog.css
@@ -121,7 +121,6 @@ table.uiTable thead {
 table.uiTable thead th {
     font-weight: bold;
     font-size: 16px;
-    padding:5px;
 }
 table.uiTable tbody {
     display:block;
@@ -129,9 +128,8 @@ table.uiTable tbody {
     overflow: auto;
 }
 table.uiTable thead th, table.uiTable tbody td {
+    box-sizing:border-box;
     border-right: 20px solid #bebebe;
-    border-top: 0;
-    border-bottom: 0;
     padding:5px;
 }
 table.uiTable thead th:nth-last-child(1),table.uiTable tbody td:nth-last-child(1) {
